# eml-discover

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/eml_discover/: __init__.py  identify.py  registry.py
src/eml_discover.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_identify.py
